--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-## Uncomment this for development
+## Uncomment these for development
+#NODE_ENV="development"
 #WEBPACK_DEV_SERVER_HOST="http://localhost:8080"
