--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
     "dotenv": "^4.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
