Bundle the assets into server binary
* Bundle built JS (and others in the future) with gobindata.
* Serve binary assets instead of relying on source path.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,11 @@ node_modules
 # gin binary file
 gin-bin
 
+# binary output
+tomatorpg
+
 # generated assets
-/public/assets
+/assets/dist
 
 # log files
 *.log
