--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
@@ -23,13 +29,16 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
     "dotenv": "^4.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-help-four": "^0.2.3",
     "gulp-htmlmin": "^3.0.0",
     "node-sass": "^4.5.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
