--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:html": "gulp build:html",
     "build:webpack": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -40,6 +40,7 @@
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-help-four": "^0.2.3",
     "gulp-htmlmin": "^3.0.0",
+    "jest": "^20.0.3",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.5",
