--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
-## Uncomment these for development
+##
+## Uncomment this for development
+##
 #NODE_ENV="development"
-#WEBPACK_DEV_SERVER_HOST="http://localhost:8080"
+
+##
+## Uncomment this if you want to use an alternative port
+## for webpack-dev-server
+##
+#WEBPACK_DEV_SERVER_HOST="http://localhost:8081"
+
+##
+## Uncomment this if you want to use an alternative port
+## for tomatorpg server. Only works with server binary.
+## If you are using gin in development, use the -port flag
+## of the tool.
+##
+#PORT=8080
