--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:html": "gulp build:html",
     "build:webpack": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack-dev-server",
-    "test": "jest"
+    "test": "yarn test:jest && yarn test:eslint",
+    "test:eslint": "eslint ./src/js ./__tests__",
+    "test:jest": "jest"
   },
   "author": "",
   "license": "ISC",
