Better documentation in .env for Google keys

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@
 ## of the tool.
 ##
 #PORT=8080
+
+## Google OAuth2 variables created in Google API Console
+## that has callback uri set to "http://{host}/oauth2/google/callback"
+#OAUTH2_GOOGLE_CLIENT_ID="google-oauth2-client-id"
+#OAUTH2_GOOGLE_CLIENT_SECRET="google-oauth2-client-secret"
