--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
     "uglifyjs-webpack-plugin": "^0.4.3"
   },
   "devDependencies": {
