--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run build:webpack && npm run build:html && npm run build:golang:assets && npm run build:golang:server",
     "build:golang:assets": "go generate assets/generate.go",
-    "build:golang:server": "go build -o tomatorpg",
+    "build:golang:server": "go build ./cmd/tomatorpg",
     "build:html": "gulp build:html",
     "build:webpack": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack-dev-server",
