Refactor cmd code
* Moved init code to relevant file.
* Added PUBLIC_URL path.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 ##
+## Public http / https URL of the site's root path
+##
+#PUBLIC_URL=http://localhost:8080
+
+##
 ## Uncomment this for development
 ##
 #NODE_ENV="development"
