--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
+    "react-router-dom": "next",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "uglifyjs-webpack-plugin": "^0.4.3"
