Updated development scripts
* Added `yarn devfront` for frontend development.
* Improved documentation in README.md

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dev": "npm-run-all --parallel dev:webpack dev:gin",
     "dev:webpack": "NODE_ENV=development webpack-dev-server",
     "dev:gin": "NODE_ENV=development gin -port 8080 -build cmd/tomatorpg/.",
+    "devfront": "npm-run-all --parallel devfront:build-and-run dev:webpack",
+    "devfront:run": "NODE_ENV=development ./tomatorpg",
+    "devfront:build-and-run": "npm-run-all build:golang:server devfront:run",
     "test": "npm-run-all test:jest test:eslint",
     "test:eslint": "eslint ./src/js ./__tests__",
     "test:jest": "jest"
