--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "npm-run-all test:jest test:eslint test:go",
     "test:eslint": "eslint ./src/js ./__tests__",
     "test:jest": "jest",
-    "test:go": "go test -v -cover ./assets/... ./cmd/... ./models/... ./protocol/... ./userauth/..."
+    "test:go": "go test -v -cover ./assets/... ./cmd/... ./models/... ./protocol/... ./userauth/... ./utils/..."
   },
   "author": "",
   "license": "ISC",
