Fix travis test reference to utils

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ script:
   - go test -v ./models
   - go test -v ./protocol/**/*
   - go test -v ./userauth
-  - go test -v ./utils/**/*
+  - go test -v ./utils
   - yarn test
