Refactor userauth code
* moved JWT related code to userauth.
* reference new JWT_SECRET env variable for signature secret.
* pass jwt secret to RPC server for signature verifications.
* properly setup jwt expiration.
* test with token expiration error.

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,10 @@
 ## that has callback uri set to "http://{host}/oauth2/google/callback"
 #OAUTH2_GOOGLE_CLIENT_ID="google-oauth2-client-id"
 #OAUTH2_GOOGLE_CLIENT_SECRET="google-oauth2-client-secret"
+
+##
+## Random secret string for JWT token signing
+## Please keep this a secret. Changing this will revoke all previous
+## login sessions to the server.
+##
+#JWT_SECRET=abcdef
