userauth: added Facebook login
* Implemented facebook login.

resolves #14.

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,11 @@
 #OAUTH2_GOOGLE_CLIENT_ID="google-oauth2-client-id"
 #OAUTH2_GOOGLE_CLIENT_SECRET="google-oauth2-client-secret"
 
+## Facebook OAuth2 variables created in Google API Console
+## that has callback uri set to "http://{host}/oauth2/google/callback"
+#OAUTH2_FACEBOOK_CLIENT_ID="facebook-app-id"
+#OAUTH2_FACEBOOK_CLIENT_SECRET="facebook-app-secret-key"
+
 ##
 ## Random secret string for JWT token signing
 ## Please keep this a secret. Changing this will revoke all previous
