userauth: basic Github login

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,11 @@
 #OAUTH2_FACEBOOK_CLIENT_ID="facebook-app-id"
 #OAUTH2_FACEBOOK_CLIENT_SECRET="facebook-app-secret-key"
 
+## Github OAuth2 variables created in Google API Console
+## that has callback uri set to "http://{host}/oauth2/google/callback"
+#OAUTH2_GITHUB_CLIENT_ID="github-app-id"
+#OAUTH2_GITHUB_CLIENT_SECRET="github-app-secret-key"
+
 ##
 ## Random secret string for JWT token signing
 ## Please keep this a secret. Changing this will revoke all previous
