--- a/.env.example
+++ b/.env.example
@@ -27,13 +27,13 @@
 #OAUTH2_GOOGLE_CLIENT_ID="google-oauth2-client-id"
 #OAUTH2_GOOGLE_CLIENT_SECRET="google-oauth2-client-secret"
 
-## Facebook OAuth2 variables created in Google API Console
-## that has callback uri set to "http://{host}/oauth2/google/callback"
+## Facebook OAuth2 variables created in Facebook App Console
+## that has callback uri set to "http://{host}/oauth2/facebook/callback"
 #OAUTH2_FACEBOOK_CLIENT_ID="facebook-app-id"
 #OAUTH2_FACEBOOK_CLIENT_SECRET="facebook-app-secret-key"
 
-## Github OAuth2 variables created in Google API Console
-## that has callback uri set to "http://{host}/oauth2/google/callback"
+## Github OAuth2 variables created in Github > Settings > Developer Settings
+## that has callback uri set to "http://{host}/oauth2/github/callback"
 #OAUTH2_GITHUB_CLIENT_ID="github-app-id"
 #OAUTH2_GITHUB_CLIENT_SECRET="github-app-secret-key"
 
