--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,11 @@
 #OAUTH2_GITHUB_CLIENT_ID="github-app-id"
 #OAUTH2_GITHUB_CLIENT_SECRET="github-app-secret-key"
 
+## Twitter OAuth2 variables created in Twitter's Application Management platform
+## that has callback uri set to "http://{host}/oauth2/twitter/callback"
+#OAUTH2_TWITTER_CLIENT_ID="twitter-consumer-key"
+#OAUTH2_TWITTER_CLIENT_SECRET="twitter-consumer-secret"
+
 ##
 ## Random secret string for JWT token signing
 ## Please keep this a secret. Changing this will revoke all previous
