--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm-run-all build:webpack build:html build:images build:golang:assets build:golang:server",
     "build:golang:assets": "go generate assets/generate.go",
     "build:golang:server": "go build ./cmd/tomatorpg",
+    "build:images": "gulp build:images",
     "build:html": "gulp build:html",
     "build:images": "gulp build:images",
     "build:webpack": "NODE_ENV=production webpack",
@@ -54,6 +55,7 @@
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-help-four": "^0.2.3",
     "gulp-htmlmin": "^3.0.0",
+    "gulp-imagemin": "^3.3.0",
     "jest": "^20.0.3",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
