--- a/package.json
+++ b/package.json
@@ -32,13 +32,12 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "next",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.6",
-    "uglifyjs-webpack-plugin": "^0.4.3"
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
@@ -51,7 +50,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-help-four": "^0.2.3",
     "gulp-htmlmin": "^3.0.0",
@@ -60,10 +59,11 @@
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
     "react-hot-loader": "^1.3.1",
-    "sass-loader": "^6.0.5",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.17.0",
     "uglify-js": "^3.0.7",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.6.1"
   }
 }
