--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "next",
     "redux": "^3.6.0",
