webpack: bundle bootstrap and extracts into app.css
* bundle bootstrap css into app.css.
* when in production mode, extracts css into `assets/src/css/app.css`.
* add route for `/assets/css/app.css`.
* fix #46.

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Simple server for creating HTTP chatroom that's suitable for TRPG games online.",
   "main": "index.js",
   "scripts": {
-    "build": "npm-run-all build:webpack build:html build:images build:golang:assets build:golang:server",
+    "build": "npm-run-all clean:dist build:webpack build:html build:images build:golang:assets build:golang:server",
     "build:golang:assets": "go generate assets/generate.go",
     "build:golang:server": "go build ./cmd/tomatorpg",
     "build:images": "gulp build:images",
     "build:html": "gulp build:html",
     "build:webpack": "NODE_ENV=production webpack",
+    "clean:dist": "rm -rf ./assets/dist",
     "dev": "npm-run-all --parallel dev:webpack dev:gin",
     "dev:webpack": "NODE_ENV=development webpack-dev-server",
     "dev:gin": "NODE_ENV=development gin -port 8080 -build cmd/tomatorpg/.",
