--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jest": "^20.0.3",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.17.0",
