--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:js": "npm-run-all test:jest test:eslint",
     "test:eslint": "eslint ./assets/src/js ./assets/__tests__",
     "test:jest": "jest",
-    "test:go": "go test -v -cover ./assets/... ./cmd/... ./models/... ./protocol/... ./userauth/... ./utils/..."
+    "test:go": "go test -v -cover ./..."
   },
   "author": "",
   "license": "ISC",
